# accum-whitepaper-v3.0.

./: .gitignore  README.md  files.txt
accum-node/: .gitignore  Cargo.toml  F-PoC  README.md  SPEC.md.txt
accum-node/data/: 000022.sst  000027.sst  000032.sst  IDENTITY  LOG  LOG.old.1773417599564714  LOG.old.1773418488549411  LOG.old.1773422321296686  MANIFEST-000034  OPTIONS-000036
accum-node/src/: block.rs  consensus.rs  constants.rs  crypto.rs  difficulty.rs  epoch.rs  error.rs  genesis.rs  main.rs  miner.rs  network.rs  p2p.rs  pool.rs  share.rs  storage.rs  types.rs
