[package]
name = "accum-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# База данных
rocksdb = "0.21"  # Более стабильная версия

# Сериализация
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"  # Для JSON API

# Криптография
sha2 = "0.10"
ripemd = "0.1"
argon2 = "0.5"
ed25519-dalek = "2.0"  # Для подписей
rand = "0.8"  # Для генерации ключей

# Сеть (исправленный libp2p)
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "kad",
    "gossipsub",
    "noise",
    "tokio",
    "macros",  # Вместо "mplex"
    "identify",
    "ping",
    "mdns",     # Для локального обнаружения
    "yamux" 
] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Логирование и мониторинг
log = "0.4"
env_logger = "0.11"
prometheus = { version = "0.13", features = ["process"] }  # Метрики

# HTTP API (для RPC)
axum = "0.7"  # Современный web framework
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Конфигурация
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }  # Для CLI аргументов

# Обработка ошибок
thiserror = "1.0"
anyhow = "1.0"

# Утилиты
hex = "0.4"
chrono = "0.4"  # Для работы с временем

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1